comp spec edited MN

--- a/Felinemotion/templates/image.html
+++ b/Felinemotion/templates/image.html
@@ -2,13 +2,13 @@
    <body>
       <h1>Please select the image best describes the emotion</h1>
       <a href="http://localhost:5000/a" onclick="return myFunction()">
-         <img src="../user1.PNG" alt="Image 1" style="width:250px;height:250px;">
+         <img src="../userData/user1.PNG" alt="Image 1" style="width:250px;height:250px;">
       </a>
       <a href="http://localhost:5000/b" onclick="return myFunction()">
-         <img src="../user2.PNG" alt="Image 2" style="width:250px;height:250px;">
+         <img src="../userData/user2.PNG" alt="Image 2" style="width:250px;height:250px;">
       </a>
       <a href="http://localhost:5000/c" onclick="return myFunction()">
-         <img src="../user3.PNG" alt="Image 3" style="width:250px;height:250px;">
+         <img src="../userData/user3.PNG" alt="Image 3" style="width:250px;height:250px;">
       </a>
 
    <script>
