new file added MN

--- a/Felinemotion/templates/image.html
+++ b/Felinemotion/templates/image.html
@@ -2,7 +2,7 @@
    <body>
       <h1>Please select the image best describes the emotion</h1>
       <a href="http://localhost:5000/a" onclick="return myFunction()">
-         <img src="../userData/user1.PNG" alt="Image 1" style="width:250px;height:250px;">
+         <img src="../userData/user1.JPG" alt="Image 1" style="width:250px;height:250px;">
       </a>
       <a href="http://localhost:5000/b" onclick="return myFunction()">
          <img src="../userData/user2.PNG" alt="Image 2" style="width:250px;height:250px;">
