--- a/Felinemotion/templates/image.html
+++ b/Felinemotion/templates/image.html
@@ -2,18 +2,18 @@
    <body>
       <h1>Please select the image best describes the emotion</h1>
       <a href="http://localhost:5000/a" onclick="return myFunction()">
-         <img src="../userData/user1.JPG" alt="Image 1" style="width:250px;height:250px;">
+         <img src="../userData/cat3Faces/user1.jpg" alt="Image 1" style="width:250px;height:250px;">
       </a>
       <a href="http://localhost:5000/b" onclick="return myFunction()">
-         <img src="../userData/user2.PNG" alt="Image 2" style="width:250px;height:250px;">
+         <img src="../userData/cat3Faces/user2.jpg" alt="Image 2" style="width:250px;height:250px;">
       </a>
       <a href="http://localhost:5000/c" onclick="return myFunction()">
-         <img src="../userData/user3.PNG" alt="Image 3" style="width:250px;height:250px;">
+         <img src="../userData/cat3Faces/user3.jpg" alt="Image 3" style="width:250px;height:250px;">
       </a>
 
    <script>
    function myFunction() {
-      return confirm("The image you selected will be used to analyze emotion.\Proceed?");
+      return confirm("The image you selected will be used to analyze emotion.\nProceed?");
    }
    </script>
    </body>
